# live_stream_monitor

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
container/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/source/: conf.py  index.rst
docs/source/installation/: baremetal.rst
src/: manage.py  requirements.txt  requirements_dev.txt
src/live_stream_monitor/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/templates/: lsm_base.html
src/youtube_live/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  test_unittest.py  utils.py  views.py
src/youtube_live/migrations/: 0001_initial.py
src/youtube_live/templates/: monitoredvideo_list.html  submit.html
