[tool.black]
skip-string-normalization = true
line-length = 79

[tool.isort]
float_to_top = true
force_grid_wrap = 2
include_trailing_comma = true
multi_line_output = 3
profile = "black"
split_on_trailing_comma = true

[tool.poetry]
name = "source"
version = "0.1.0"
description = ""
authors = ["yellowsoar <yellowsoar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
djangorestframework = "^3.14.0"
yt-dlp = "^2023.12.30"
celery = "^5.3.6"
uvicorn = "^0.27.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
